# ledd

./: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.backup  cmake_install.cmake
artifacts/etc/default/: ledd
artifacts/hub/script/: ledd
include/: ledHubStatus.h  ledSignals.h  log.h
packaging/: ledd.spec
platform/calix/: Makefile  ledCalixSignal.h  ledGDbus.c  ledGDbus.h  ledPlatformCalix.c  ledPlatformCalix.h
platform/generic-linkv2/: Makefile  ledPlatformGenericLinkV2.c  ledPlatformGenericLinkV2.h
platform/samsungtv/: Makefile  ledGDbusAPI.c  ledGDbusAPI.h  ledPlatformSamsungTV.c  ledPlatformSamsungTV.h
platform/samsungtv/dbus/: com.samsung.tv.iot.hub.Service.conf
src/: ledApp.c  ledApp.h  ledFileIPC.c  ledFileIPC.h  ledPlatform.c  ledPlatform.h  ledPoll.c  ledPoll.h
src/linkv2/: ledLinkv2Cmd.c  ledLinkv2Cmd.h  ledNcpSocket.c  ledNcpSocket.h  ledPlatformLinkV2.c  ledPlatformLinkV2.h
test/: led_test.sh  test_ledd.sh
